# eo2py

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pom.xml  testXSLT.sh
.github/workflows/: maven.yml  python-package.yml  python-publish.yml
eo-python-runtime/: README.md  pyproject.toml  requirements.txt  setup.cfg
eo-python-runtime/scripts/: release.sh  setup_env.sh
eo-python-runtime/src/eo2py/: atoms.py
eo-python-runtime/src/eo2py/recursive_dataization/: atoms1.py  old-fibo.py  oldatoms.py  that-fibonacci-thing.py
eo-python-runtime/tests/atoms/: simple_object.py  test_atoms.py
eo-python-runtime/tests/example_programs/: test_args_varargs.py  test_arrays.py  test_auto_fibonacci.py  test_chained_phi.py  test_factorial.py  test_fibonacci.py  test_free_decoratee.py  test_inline_attributes.py  test_simple_array.py  test_simple_fibonacci.py  test_simple_object.py  test_simple_varargs.py  test_vector.py  utils.py
eo2py-maven-plugin/: README.md  pom.xml
python-runtime/: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
python-runtime/scripts/: build.sh  setup_env.sh
python-runtime/src/eo2py/: atoms.py
python-runtime/src/eo2py/recursive_dataization/: atoms.py  eoif.py
python-runtime/tests/: factorial.py  fibonacci.py  simple_array.py  simple_object.py  vector.py
python-runtime/tests/atoms/: simple_object.py  test_atoms.py
python-runtime/tests/example_programs/: test_fibonacci.py  test_simple_array.py  test_vector.py
sandbox/: README.md  pom.xml  run.sh  setup_python_env.sh
sandbox/eo/: app.eo  args_varargs.eo  (+9 more)
(+33 files in other folders)
