# setuptools
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# pytest configs
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
    "--cov-config=.coveragerc",
    "--cov-report=xml:tests/reports/coverage.xml",
    "--cov-report=html:tests/reports/html",
    "--cov=src"
]
testpaths = [
    "tests",
]

# tox configs
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38
isolated_build=true

[testenv]
deps = -rrequirements.txt
commands = pytest
"""
